File Name: CHANGES

01/19/2017 FASP 1.9.2:
- Change filenames according to package structure.
- Add file dependency in each file.

01/15/2017 FASP 1.9.1:
- Prepare to change the structure of faspsolver.
- Merge *_mf.c files with corresponding Krylov methods.
- Move quadrature.c to test/src.
- File name change: auxiliary.c ==> auxiliary.inl.

01/15/2017 FASP 1.9.0:
- Separate data structures and routines for reservoir simulation from base.
- Change block_iCSRmat to iBLCmat and corresponding functions.
- Delete some deprecated functions.
- Fix a bug in interpolation.c: reported by Liu Hui.
- Remove ilu.f from SparseKit.
- Clean up GMG code.
- Fix a typo: _sympat ==> _sympart.
- File name change: _block.c ==> _blc.c. 

01/10/2017 FASP 1.8.9:
- Fix some memory leaks in AMG setup routines while early termination.
- Fix some warnings in PVBiCGstab.
- Fix some warnings in ILU.

12/30/2016 FASP 1.8.8:
- Update docomentation and webpage. 
- Add ILU subroutines with OpenMP support.
- Change block_dCSRmat to dBLCmat and corresponding functions.
- Change _bdcsr_ to _dblc_.
- Modify VS10 for new function names.
- Major changes which makes previous versions not compatible.

10/18/2016 FASP 1.8.7:
- Fix a bug in dvec_axpyz.
- Fix Makefile when FASP.mk is missing.

09/22/2016 FASP 1.8.6:
- Make changes for new preconditioners in FASP4BLKOIL.
- Translate ILU from Fortran to C.
- Add a new flag for using C version ILU.
- Add symbfactor in C.
- Modify VS10 for new ILU routines accordingly.
- Remove ilu.f from the windows VS10 version.
- Correct coarsening for positive off-diag entries.
- Test FASP on macOS Sierra 10.12; seems consistently slower than 10.11.

03/06/2016 FASP 1.8.5:
- Fix a bug in BSR AMG.
- Add some comments and reference for GCR.
- Add a new version of BiCGstab implementation.
- Update regeression results.
- Refresh function decroration in fasp_functs.h.

02/15/2016 FASP 1.8.4:
- Add an interface to Intel MKL PARDISO.
- Add PARDISO option for coarse solver of AMG.